--- a/arch/arm64/configs/pinephone_multidist_defconfig
+++ b/arch/arm64/configs/pinephone_multidist_defconfig
@@ -377,6 +377,7 @@ CONFIG_DRM_SUN4I=y
 CONFIG_DRM_SUN6I_DSI=y
 CONFIG_DRM_SUN8I_DW_HDMI=y
 CONFIG_DRM_SUN8I_MIXER=y
+CONFIG_DRM_PANEL_ILITEK_ILI9881C=y
 CONFIG_DRM_PANEL_SITRONIX_ST7703=y
 CONFIG_DRM_DW_HDMI_AHB_AUDIO=y
 CONFIG_DRM_DW_HDMI_I2S_AUDIO=y
@@ -463,14 +464,11 @@ CONFIG_USB_CONFIGFS_RNDIS=y
 CONFIG_USB_CONFIGFS_EEM=y
 CONFIG_USB_CONFIGFS_MASS_STORAGE=y
 CONFIG_USB_CONFIGFS_F_FS=y
+CONFIG_USB_CONFIGFS_F_UAC1=y
+CONFIG_USB_CONFIGFS_F_UAC2=y
 CONFIG_USB_CONFIGFS_F_HID=y
 CONFIG_USB_CONFIGFS_F_UVC=y
-CONFIG_USB_GADGETFS=y
-CONFIG_USB_FUNCTIONFS=y
-CONFIG_USB_FUNCTIONFS_ETH=y
-CONFIG_USB_FUNCTIONFS_RNDIS=y
-CONFIG_USB_FUNCTIONFS_GENERIC=y
-CONFIG_USB_CDC_COMPOSITE=y
+CONFIG_USB_CONFIGFS_F_PRINTER=y
 CONFIG_TYPEC=y
 CONFIG_TYPEC_TCPM=y
 CONFIG_TYPEC_TCPCI=y
@@ -605,6 +603,7 @@ CONFIG_CRYPTO_USER_API_RNG=y
 CONFIG_CRYPTO_USER_API_AEAD=y
 CONFIG_CRYPTO_DEV_SUN8I_CE=y
 CONFIG_PKCS8_PRIVATE_KEY_PARSER=y
+# CONFIG_RAID6_PQ_BENCHMARK is not set
 CONFIG_CRC_T10DIF=y
 CONFIG_DMA_CMA=y
 CONFIG_CMA_SIZE_MBYTES=64
