--- a/arch/arm/configs/orangepi_defconfig
+++ b/arch/arm/configs/orangepi_defconfig
@@ -209,6 +209,7 @@ CONFIG_NFC_DIGITAL=y
 CONFIG_NFC_NCI=y
 CONFIG_NFC_NXP_NCI=y
 CONFIG_NFC_NXP_NCI_I2C=y
+CONFIG_PAGE_POOL_STATS=y
 CONFIG_UEVENT_HELPER=y
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
@@ -603,7 +604,7 @@ CONFIG_F2FS_CHECK_FS=y
 CONFIG_F2FS_FS_COMPRESSION=y
 CONFIG_FS_ENCRYPTION=y
 CONFIG_FANOTIFY=y
-CONFIG_AUTOFS4_FS=y
+CONFIG_AUTOFS_FS=y
 CONFIG_FUSE_FS=y
 CONFIG_CUSE=y
 CONFIG_OVERLAY_FS=y
