--- a/arch/arm/configs/pocketbook_touch_lux_3_defconfig
+++ b/arch/arm/configs/pocketbook_touch_lux_3_defconfig
@@ -349,7 +349,7 @@ CONFIG_F2FS_CHECK_FS=y
 CONFIG_F2FS_FS_COMPRESSION=y
 CONFIG_FS_ENCRYPTION=y
 CONFIG_FANOTIFY=y
-CONFIG_AUTOFS4_FS=y
+CONFIG_AUTOFS_FS=y
 CONFIG_FUSE_FS=y
 CONFIG_CUSE=y
 CONFIG_VFAT_FS=y
