--- a/arch/arm64/configs/pinephone_defconfig
+++ b/arch/arm64/configs/pinephone_defconfig
@@ -219,6 +219,7 @@ CONFIG_MAC80211=m
 CONFIG_MAC80211_LEDS=y
 CONFIG_RFKILL=m
 CONFIG_RFKILL_GPIO=m
+CONFIG_PAGE_POOL_STATS=y
 CONFIG_UEVENT_HELPER=y
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
